# gorm-learning

./: .env  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
controllers/: CustomerController.go  OrderController.go  ProductController.go
database/: database_exist.go  seeder.go
equivalent_rust/: Cargo.toml
equivalent_rust/.sqlx/: query-45620f88504f06ca447159531e7f7634291e0d39dfdd498d438e5bab1c94ce1f.json  query-58b9726bbd2a6ba3f762f279d7056930ab7ef6e1e84ee5227cfde4ce4ad3f135.json  query-6e5c7a47a7310c6db22df97a92cfec628fe5f7512badf7f562d0d26d250c49c7.json  query-a8dc0ce1e51c30467eb10166d54a341b88ad7e912ea04640870a5854c49cc8bd.json  query-af8480af90009156661732ea59e3a66a180bd860d76f19e06bda2bf713295583.json  query-d3a89c0cf7c0fdf9056ea9f9cb67404a4d3303442d7638217c0ceaa3d2d5e5d4.json  query-d955a379cebbd8f783640eb8d9f5d9e51ed65ab807d4a10c0b8194b80b55df7e.json  query-ff1b8f8cd660bd7da154f9b5da0c9b863b3ab82231c15f3990201875a42358a6.json
equivalent_rust/src/: main.rs  models.rs  order_handler.rs
models/: Customer.go  Order.go  OrderItem.go  Product.go
mysql/: init.sql
routes/: router.go
viewmodels/: OrderViewModel.go
