[package]
name = "equivalent_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.2.1", features = ["tokio"] }
tokio = "1.37.0"
chrono = "0.4.38"
lru = "0.12.3"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1"

# tokio + native-tls
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "mysql", "time", "macros"] }
bincode = "1.3.3"
